package correctedOCP;

interface DiscountStrategy {
    double calculate(double price);
}